@@ -1,5 +1,6 @@
 Adminer dev:
 Fix importing multiple SQL files not terminated by semicolon
+Use <datalist> for altering collations
 
 Adminer 5.0.2 (released 2025-03-10):
 PostgreSQL: Fix setting NULL and original value on enum (bug #884)
